# hlsa_task3

./: Cargo.toml  Dockerfile  README.md  run.sh
src/: main.rs
