[package]
name = "gamp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.67"
serde = { version = "1.0.129", features = ["derive"] }
tokio = { version = "1.12.0", features = ["full"] } 
reqwest = { version = "0.11.6", features = ["json"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
